fix sidebar z-index

--- a/src/components/Layout/Sidebar/style.sass
+++ b/src/components/Layout/Sidebar/style.sass
@@ -1,5 +1,5 @@
 .sidebar
-  z-index: 1001 !important
+  z-index: 1000 !important
   font-size: 1.48rem !important
 
 .sidebarContent
